--- a/src/main/resources/templates/layouts/layout-main-table.html
+++ b/src/main/resources/templates/layouts/layout-main-table.html
@@ -24,7 +24,6 @@
     </div>
     <!-- /.content-header -->
 
-<!--    <section id="main-section"></section>-->
     <section class="content">
       <div class="container-fluid">
         <div class="row">
@@ -40,10 +39,17 @@
               <!-- /.card-body -->
             </div>
             <!-- /.card -->
-
-            <div class="card col-6" id="layout-card-todolist"></div>
           </section>
-          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+
+        <div class="row">
+          <section class="col-6 connectedSortable">
+            <div class="card" id="layout-card-todolist"></div>
+          </section>
+          <section class="col-6 connectedSortable">
+            <div class="card" id="layout-card-chat"></div>
+          </section>
         </div>
         <!-- /.row -->
       </div>
